--- a/APPVIEW/Views/Cart/ViewCart.cshtml
+++ b/APPVIEW/Views/Cart/ViewCart.cshtml
@@ -69,12 +69,12 @@
                                         bool tk = true;
                                         var ls = new List<Guid>();
                                         var lc = new List<Guid>();
-                                        @for (int i = 0; i < Model.Count; i++)
+                                                @for (int i = 0; i < Model.Count; i++)
                                         {
                                             tk = true;
                                             ls = new List<Guid>();
                                             lc = new List<Guid>();
-                                            @foreach (var pro in ViewBag.prod)
+                                                    @foreach (var pro in ViewBag.prod)
                                             {
                                                 if (pro.Id_Product == @Model[i].Id_Product)
                                                 {
@@ -91,43 +91,43 @@
                                                 }
                                             }
 
-                                            <input hidden asp-for="@Model[i].Id" value="@Model[i].Id" id="pro" />
-                                            <input hidden asp-for="@Model[i].Id_Product" value="@Model[i].Id_Product" />
-                                            <input hidden asp-for="@Model[i].Name" value="@Model[i].Name" />
+                                                    <input hidden asp-for="@Model[i].Id" value="@Model[i].Id" id="pro" />
+                                                    <input hidden asp-for="@Model[i].Id_Product" value="@Model[i].Id_Product" />
+                                                    <input hidden asp-for="@Model[i].Name" value="@Model[i].Name" />
                                             var tt = @Model[i].Price * @Model[i].Quantity;
-                                            <tr>
+                                                    <tr>
 
-                                                @foreach (var img in ViewBag.Img)
+                                                        @foreach (var img in ViewBag.Img)
                                                 {
 
                                                     if (img.IdProductdetail == @Model[i].Id)
                                                     {
-                                                    <td>
-                                                        <div class="media">
-                                                            <div class="d-flex">
-                                                                <img src="~/images/@img.Name" style="width: 150px;" alt="">
-                                                            </div>
-                                                        </div>
-                                                    </td>
+                                                            <td>
+                                                                <div class="media">
+                                                                    <div class="d-flex">
+                                                                        <img src="~/images/@img.Name" style="width: 150px;" alt="">
+                                                                    </div>
+                                                                </div>
+                                                            </td>
                                                         tk = false;
                                                         break;
                                                     }
                                                 }
-                                                @if (tk)
+                                                        @if (tk)
                                                 {
-                                                    @foreach (var anh in ViewBag.prod)
+                                                            @foreach (var anh in ViewBag.prod)
                                                     {
                                                         if (tk == false)
                                                         {
                                                             break;
                                                         }
-                                                        @if (anh.Id_Product == Model[i].Id_Product)
+                                                                @if (anh.Id_Product == Model[i].Id_Product)
                                                         {
                                                             if (tk == false)
                                                             {
                                                                 break;
                                                             }
-                                                            @foreach (var obj in ViewBag.Img as List<Image>)
+                                                                    @foreach (var obj in ViewBag.Img as List<Image>)
                                                             {
                                                                 if (tk == false)
                                                                 {
@@ -135,13 +135,13 @@
                                                                 }
                                                                 if (anh.Id == obj.IdProductdetail)
                                                                 {
-                                                                <td>
-                                                                    <div class="media">
-                                                                        <div class="d-flex">
-                                                                            <img src="~/images/@obj.Name" style="width: 150px;" alt="">
-                                                                        </div>
-                                                                    </div>
-                                                                </td>
+                                                                        <td>
+                                                                            <div class="media">
+                                                                                <div class="d-flex">
+                                                                                    <img src="~/images/@obj.Name" style="width: 150px;" alt="">
+                                                                                </div>
+                                                                            </div>
+                                                                        </td>
                                                                     tk = false;
                                                                     break;
                                                                 }
@@ -153,65 +153,65 @@
 
                                                     }
                                                 }
-                                            <td>@Model[i].Name</td>
+                                                    <td>@Model[i].Name</td>
 
-                                            <td style="color:#f15e2c">@Model[i].Price.ToString("C0", new CultureInfo("vi-VN"))</td>
+                                                    <td style="color:#f15e2c">@Model[i].Price.ToString("C0", new CultureInfo("vi-VN"))</td>
 
-                                            <td>
+                                                    <td>
 
-                                                <div class="product_count">
-                                                    <input type="number" id="quantity_@Model[i].Id" title="Quantity:" class="input-text qty" value="@Model[i].Quantity" asp-for="@Model[i].Quantity" min="1" oninput="validateQuantity(this)">
-                                                    <button onclick="incrementQuantity('@Model[i].Id')" class="increase items-count" type="button">
-                                                        <i class="fa fa-plus"></i>
-                                                    </button>
-                                                    <button onclick="decrementQuantity('@Model[i].Id')" class="reduced items-count" type="button">
-                                                        <i class="fa fa-minus"></i>
-                                                    </button>
-                                                </div>
-                                            </td>
+                                                        <div class="product_count">
+                                                            <input type="number" id="quantity_@Model[i].Id" title="Quantity:" class="input-text qty" value="@Model[i].Quantity" asp-for="@Model[i].Quantity" min="1" oninput="validateQuantity(this)">
+                                                            <button onclick="incrementQuantity('@Model[i].Id')" class="increase items-count" type="button">
+                                                                <i class="fa fa-plus"></i>
+                                                            </button>
+                                                            <button onclick="decrementQuantity('@Model[i].Id')" class="reduced items-count" type="button">
+                                                                <i class="fa fa-minus"></i>
+                                                            </button>
+                                                        </div>
+                                                    </td>
 
-                                            <td class="align-middle">
-                                                <select asp-for="@Model[i].Id_Size">
-                                                        @foreach (var Size in ViewBag.Size)
+                                                    <td class="align-middle">
+                                                        <select asp-for="@Model[i].Id_Size">
+                                                                @foreach (var Size in ViewBag.Size)
                                                         {
 
-                                                            @foreach (var c in ls)
+                                                                    @foreach (var c in ls)
                                                             {
                                                                 if (c == @Size.Id)
                                                                 {
-                                                                <option value="@Size.Id">@Size.Name</option>
+                                                                        <option value="@Size.Id">@Size.Name</option>
                                                                 }
                                                             }
                                                         }
-                                                </select>
-                                            </td>
+                                                        </select>
+                                                    </td>
 
-                                            <td class="align-middle">
-                                                <select asp-for="@Model[i].Id_Color">
-                                                        @foreach (var Color in ViewBag.Color)
+                                                    <td class="align-middle">
+                                                        <select asp-for="@Model[i].Id_Color">
+                                                                @foreach (var Color in ViewBag.Color)
                                                         {
-                                                            @foreach (var c in lc)
+                                                                    @foreach (var c in lc)
                                                             {
                                                                 if (c == @Color.Id)
                                                                 {
-                                                                <option value="@Color.Id">@Color.Name</option>
+                                                                        <option value="@Color.Id">@Color.Name</option>
                                                                 }
 
                                                             }
                                                         }
-                                                </select>
-                                            </td>
+                                                        </select>
+                                                    </td>
 
-                                            <td class="align-middle" style="color:#f15e2c">
-                                                    @tt.ToString("C0", new CultureInfo("vi-VN"))
-                                            </td>
-                                            <td>
-                                                <a class="btn btn-light" href="@Url.ActionLink("DeleteCartItem","Cart",new{id=Model[i].Id})"><i class="fa fa-trash"></i></a>
-                                                <a class="btn btn-light" href="@Url.ActionLink("checkout","home",new{id=Model[i].Id})"><i class="fa fa-bill"></i>Thanh toán</a>
-                                            </td>
+                                                    <td class="align-middle" style="color:#f15e2c">
+                                                            @tt.ToString("C0", new CultureInfo("vi-VN"))
+                                                    </td>
+                                                    <td>
+                                                        <a class="btn btn-light" href="@Url.ActionLink("DeleteCartItem","Cart",new{id=Model[i].Id})"><i class="fa fa-trash"></i></a>
+                                                <a class="btn btn-light" href="@Url.ActionLink("checkout","home",new{id=Model[i].Id})" onclick="checkquantity()"><i class="fa fa-bill"></i>Thanh toán</a>
+                                                    </td>
 
 
-                                        </tr>
+                                                </tr>
                                         }
 
 
@@ -330,7 +330,7 @@
     }
     function validateQuantity(input) {
         var value = parseInt(input.value);
-
+        let maxIntValue = Number.MAX_SAFE_INTEGER;
         if (isNaN(value)) {
             // Nếu giá trị là NaN, đặt giá trị về 1
             input.value = "";
@@ -338,7 +338,11 @@
             // Nếu giá trị là số âm, đặt giá trị về 1
             input.value = 1;
         }
-    }
+        if (value > 99999) {
+            input.value = 1;
+        }
+    }  
+   
     function incrementQuantity(itemId) {
         var quantityInput = document.getElementById('quantity_' + itemId);
         var currentQuantity = parseInt(quantityInput.value);
