--- a/APPVIEW/Views/ProductDetail/Create.cshtml
+++ b/APPVIEW/Views/ProductDetail/Create.cshtml
@@ -149,14 +149,14 @@
                     <div class="row mb-3">
                         <label asp-for="Quantity" class="col-sm-2 col-form-label">Số lượng</label>
                         <div class="col-sm-10">
-                            <input type="number" min="0" class="form-control" asp-for="Quantity" placeholder="Số lượng" />
+                            <input type="number" min="1" max="100000" class="form-control" asp-for="Quantity" placeholder="Số lượng" />
                             <span asp-validation-for="Quantity" class="text-danger"></span>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label asp-for="Price" class="col-sm-2 col-form-label">Giá</label>
                         <div class="col-sm-10">
-                            <input type="number" min="0" class="form-control" asp-for="Price" placeholder="Giá" />
+                            <input type="number" min="1" max="1000000000" class="form-control" asp-for="Price" placeholder="Giá" />
                             <span asp-validation-for="Price" class="text-danger"></span>
                         </div>
                     </div>
